querySelector/finding elements

--- a/Lesson 1/index.html
+++ b/Lesson 1/index.html
@@ -12,6 +12,12 @@
     <div class="cointainer">
         <h1 class="just_a_title">Test</h1>
 
+        <h2 class="header">Header</h2>
+        <p id='text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, facilis quia doloribus
+            blanditiis ratione
+            fuga doloremque modi dolor. Ullam nulla voluptate tempora quis? Quas dolorum aperiam perferendis quaerat
+            delectus? Inventore.</p>
+
         <div id="out">Vitalii</div>
     </div>
     <script src="js/script.js"></script>
