--- a/Lesson 1/index.html
+++ b/Lesson 1/index.html
@@ -19,6 +19,12 @@
             delectus? Inventore.</p>
 
         <div id="out">Vitalii</div>
+
+        <div class="div">1</div>
+        <div class="div">2</div>
+        <div class="div">3</div>
+        <div class="div">4</div>
+        <div class="div">5</div>
     </div>
     <script src="js/script.js"></script>
 </body>
