added randomiser, func, work with an array

--- a/Lesson 2 - Input. Func, Search for elements/index.html
+++ b/Lesson 2 - Input. Func, Search for elements/index.html
@@ -14,6 +14,7 @@
         <input type="text" class="input_in">
         <button type="submit" id="ok">Write Your message below</button>
         <div class="output"></div>
+        <button class="shifter_btn">Shift</button>
     </div>
     </div>
     <script src="js/script.js"></script>
